--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,6 +39,9 @@ jobs:
       actions: read
       contents: read
 
+      # required for OIDC token
+      id-token: write
+
     strategy:
       fail-fast: false
       matrix:
